test/Fail/Issue2723.err
Issue2723.agda:14.1-16.9: error: [SplitError.CosplitCatchall]
Cannot split into projections because not all clauses have a
projection copattern
when checking the definition of foo
